# local_faiss_mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  MANIFEST.in  PUBLISHING.md  README.md  concept.md  pyproject.toml  requirements.txt  server.json  server.py  test_standalone.py
.github/workflows/: publish.yml  tests.yml
local_faiss_mcp/: __init__.py  cli.py  colors.py  document_parser.py  metadata_extraction.py  progress.py  server.py
tests/: __init__.py  test_colors.py  test_document_parser.py  test_embedding_models.py  test_list_command.py  test_metadata_for_pdfs.py  test_progress.py  test_prompts.py  test_reranking.py  test_standalone.py
